--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <ul class="expt-list"></ul>
       </div>
       <div class="simulator">
-        <h1 class="title">2DOF Forced Vibration Simulation</h1>
+        <h1 class="title">Free vibration of cantilever beam - expR</h1>
         <object
-          data="2DOF-Forced-Vib.swf"
+          data="./videoSim/Cantilever.swf"
           type="application/x-shockwave-flash"
           width="800"
           height="600"
           id="swfPlayer"
         >
-          <param name="movie" id="movieParam" value="2DOF-Forced-Vib.swf" />
+          <param name="movie" id="movieParam" value="./videoSim/Cantilever.swf" />
         </object>
       </div>
     </div>
